key update: available: true if no account & swagger ui graphic
